Fix data type maping and connection closure bug.  Improve handling of complex data types in Cassandra Input

--- a/pentaho-cassandra-plugin/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/pentaho-cassandra-plugin/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -65,3 +65,5 @@ CassandraInput.Injection.APPLICATION_CONF=Path to the application.conf file
 CassandraInputDialog.ApplicationConf.Label=application.conf file
 
 CassandraInputDialog.Ssl.Label=Use SSL
+CassandraInputDialog.ExpandMaps.Label=Expand map keys as collection?
+CassandraInputDialog.ExpandCollection.Label=Expand first collection field?
