[PDI-18504] - Cassandra Input step logs error with LIMIT and ALLOW FILTERING clause

--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -38,7 +38,7 @@ CassandraInputDialog.Warning.Message.CassandraQueryContainsUnresolvedVarsFieldSu
 CassandraInput.Info.DefaultColumnValidator=Query specifies column {0}, however this column is not in the table schema. The default table validator will be used
 CassandraInput.Info.UnableToRetrieveColumnMetaData=Unable to connect to retrieve column meta data for {0} at this stage
 CassandraInput.Info.Connecting=Connecting to Cassandra node at {0} : {1} using keyspace {2} ...
-CassandraInput.Info.GettintMetaData=Getting meta data for table {0}
+CassandraInput.Info.GettingMetaData=Getting meta data for table {0}
 CassandraInput.Info.ExecutingQuery=Executing query {0} {1} ...
 CassandraInput.Info.UsingGZIPCompression=(using GZIP query compression)
 CassandraInput.Info.ClosingConnection=Closing connection ...
